// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas shoes",
      },
      "quantity": 5,
    },
    {
      "product": {
        "price": 10000,
        "title": "Red hat",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 206940,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when summary() is called  1`] = `
{
  "formatted": "R$2,069.40",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas shoes",
      },
      "quantity": 5,
    },
    {
      "product": {
        "price": 10000,
        "title": "Red hat",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 206940,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
